--- a/lesson7/1/style.css
+++ b/lesson7/1/style.css
@@ -7,12 +7,14 @@ body{
     background-color: #fdde7e;
 }
 .stickers {
+    margin-left: 250px;
+    margin-top: 100px;
     width: 1000px;
    height: 450px;
     display: flex;
     flex-direction: row ;
     justify-content:space-between;
-    margin: 80px 70px;
+    /* margin: 80px 70px; */
   }
   .block1:hover{
     transform: scale(1.2);
