--- a/lesson13/style.css
+++ b/lesson13/style.css
@@ -7,6 +7,8 @@
 }
 
 .block_1 {
+  width: 100%;
+  height: 1072px;
   margin: 0;
 }
 
@@ -146,6 +148,7 @@
   color: white;
   margin-top: 30px;
 }
+
 
 .block_4 {
   height: 1536px;
@@ -620,5 +623,21 @@ input textarea::placeholder {
   position: absolute;
   top: 38px;
 }
+.navbar{
+  display: none;
+}
 
 /*# sourceMappingURL=style.css.map */
+
+@media(min-width:320px) and (max-width:400px){
+.block_1{
+  width: 400px;
+}
+.header__navigation_bar{
+  display: none;
+}
+.logo_1{
+  margin-left: 100px;
+}
+
+}
