--- a/style.css
+++ b/style.css
@@ -2,17 +2,19 @@ body{
     padding: 0;
     margin: 0;
     line-height: 1;
-    /* background-color: rgb(206, 89, 108); */
+   background-color: rgb(255, 214, 221);
     font-family: Arial, 'sans-serif';
  
 }
 .container{
-    width: 70%;
-    max-width: 700px;
-    margin: auto;
+  width: 85%;
+  max-width: 1400px;
+  margin: auto;
 }
 #beetroot_img{
-    width: 100%;
+    width: 100px;
+    height: 100px;
+    margin-left: 30px;
   }
   .title{
       font-weight: normal;
@@ -21,21 +23,47 @@ body{
       border-bottom: 2px solid black;
   }
   .lessons_list{
+    display: flex;
+    color: black;
+    text-decoration: none;
+    flex-wrap: wrap;
       border: 1px solid grey;
       list-style-type: none;
 padding:0 ;
   }
 .lessons_list .list_item{
+  width: 200px;
+  height: 200px;
+  background-color: rgb(202, 86, 106);
+  flex-wrap: wrap;
+  text-decoration: none;
 padding:20px 30px;
+margin: 20px;
+color: black;
 font-size: 14px;
 border-bottom: 1px solid darkgrey;
-
   }
+  .lessons_list .list_item:hover{
+    -o-transform: scaleY(1.2);
+    -ms-transform: scaleY(1.2);
+    -moz-transform: scaleY(1.2);
+    -webkit-transform: scaleY(1.2);
+    transform: scaleY(1.2);
+    transition-duration: .2s;
+    color: white;
+    background-color: rgb(85, 21, 110);
+  }
+
   .lessons_list .list_item:last-child{
 border-bottom: none;
   }
   .list_item a{
+    color: rgb(102, 8, 8);
       font-size: 30px;
+      text-decoration: none;
+  }
+  .list_item a:hover{
+    color: white;
   }
 
 
