--- a/lesson24/1/style.css
+++ b/lesson24/1/style.css
@@ -3,13 +3,10 @@
     margin: 0;
     padding: 0;
 }
-body{
-    background-color: rgb(191, 191, 255);
-}
+
 .container{
     width: 85%;
-    margin: 0 auto;
-    margin-top: 30px;
+    margin: 250px auto;
 }
 hr{
     margin-top: 40px;
@@ -19,20 +16,21 @@ p{
     margin-top: 30px;
     font-family: 'Roboto', sans-serif;
 }
+.navigation{
+    position: relative;
+    left: 40%;
+}
 ul{
     list-style: none;
+    
 }
 li{
-    font-family: 'Roboto', sans-serif;
     margin-top: 10px;
-    text-align: center;
+    text-align: start;
 }
-
-.text1{
+a{
+    color: black;
+    text-decoration: none;
     font-family: 'Roboto', sans-serif;
-    font-size: 24px; 
-    font-weight: 600;
-    color: black; 
-    margin-top: 20px;
-    margin-bottom: 10px;
+    font-weight: 700;
 }
