--- a/lesson24/1/style.css
+++ b/lesson24/1/style.css
@@ -17,8 +17,7 @@ p{
     font-family: 'Roboto', sans-serif;
 }
 .navigation{
-    position: relative;
-    left: 40%;
+   margin-left: 400px;
 }
 ul{
     list-style: none;
