--- a/lesson24/1/text.css
+++ b/lesson24/1/text.css
@@ -18,3 +18,8 @@
 p{
     font-family: 'Roboto', sans-serif;  
 }
+.back{
+    color: blue;
+    font-family: 'Roboto', sans-serif;  
+    font-size: 20px;
+}
