--- a/exam2/css/style.css
+++ b/exam2/css/style.css
@@ -18,6 +18,7 @@
 .header__topbar {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .header__topbar .logo {
   margin-left: 160px;
@@ -144,6 +145,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   display: flex;
+  justify-content: center;
 }
 .container3 .back3 {
   width: 585px;
@@ -151,7 +153,7 @@
   position: relative;
 }
 .container3 .back3 .build1 {
-  left: 125px;
+  left: 64px;
   top: 70px;
   position: absolute;
   margin-bottom: 140px;
@@ -214,6 +216,7 @@
   width: 100%;
   margin-top: 140px;
   display: flex;
+  justify-content: center;
 }
 .container4 .back2 {
   width: 585px;
@@ -405,8 +408,9 @@
   margin-bottom: 114px;
 }
 .container6 .gallery {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
+  justify-content: center;
   display: flex;
 }
 .container6 .gallery__right {
@@ -493,9 +497,11 @@
   position: relative;
 }
 .container8_main {
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
   display: flex;
+  justify-content: center;
+  max-width: 1200px;
 }
 .container8 .info8 {
   color: #ffffff;
@@ -527,6 +533,7 @@
 
 .container9 {
   display: flex;
+  justify-content: center;
 }
 
 span {
@@ -574,6 +581,10 @@ input[type=text]:focus {
   font-weight: 500;
   line-height: 22px;
   text-transform: uppercase;
+}
+.centerdiv{
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .submit {
