--- a/lesson4/style.css
+++ b/lesson4/style.css
@@ -6,57 +6,51 @@
 body{
     background-color: #121116;
 }
-.Logo_1{
- margin-top: 120px;
- margin-left: 46%;
+.container{
+    max-width: 400px;
+    margin: 0 auto;
+    padding-top: 200px;
+
+}
+ .Logo_1{
+    display: block;
+    margin-left: 37%;
+    margin-right: 50%;
+ 
 }
 #text_1{
-width: 158px;
-height: 14px;
-color: #ffffff;
-font-family: "Open Sans";
-font-size: 20px;
-font-weight: 400;
-text-transform: uppercase;
-letter-spacing: 1px;
-margin-left: 380px;
-margin-top: 30px;
+    color: #fff;
+    font-family: "Open Sans";
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    text-align: center;
+}
 
-}
-.layer_1{
-width: 230px;
-height: 50px;
-margin-left: 300px;
-position: relative;
-}
     
 hr{
-    margin-left: 640px;
-    width: 250px;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 10px;
 }
 ul{
-list-style-type: none;
-margin-left: 680px;
-padding: 0;
-overflow: hidden;
-
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
 }
-li {
-    float: left;
-  }
-  
   li img {
-    display: block;
     color: white;
     text-align: center;
     padding: 16px;
     text-decoration: none;
   }
-  #footer_1{
-      color: blue;
+ #footer_1{
+    color: blue;
   }
   .text_last{
-      color: white;
-      text-align: center;
+    color: white;
+    text-align: center;
   }
   
