--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     padding: 0;
     margin: 0;
     line-height: 1;
-   background-color: rgb(255, 214, 221);
+   background-color: #FFF0F5;
     font-family: Arial, 'sans-serif';
  
 }
@@ -27,9 +27,9 @@ body{
     color: black;
     text-decoration: none;
     flex-wrap: wrap;
-      border: 1px solid grey;
+     
       list-style-type: none;
-padding:0 ;
+
   }
 .lessons_list .list_item{
   width: 200px;
@@ -41,7 +41,6 @@ padding:20px 30px;
 margin: 20px;
 color: black;
 font-size: 14px;
-border-bottom: 1px solid darkgrey;
   }
   .lessons_list .list_item:hover{
     -o-transform: scaleY(1.2);
