--- a/lesson8/1/style.css
+++ b/lesson8/1/style.css
@@ -37,6 +37,8 @@ margin-top: 39px;
 }
 .decoration{
     letter-spacing: -0.09px;
+    font-size: 100px;
+    padding-top: 20px;
 line-height: 40px;
 }
 .info_2{
