--- a/lesson10/2/style.css
+++ b/lesson10/2/style.css
@@ -1,30 +1,28 @@
+@font-face{
+    font-family: "Open Sans";
+    src: url('Open_Sans/OpenSans-Regular.ttf') format(truetype);
+}
 *{
     margin: 0;
     padding: 0;
     line-height: 1;
 }
-/* .main_container{
-    width: 100%;
-    height: 100%;
-    background-image: url(Layer_5.png);
-    background-repeat: repeat;
-} */
 .container{
     display: flex;
     position: relative;
     background-color: #111a28;
     width: 900px;
-height: 550px;
-box-shadow: 0 0 65px rgba(0, 0, 0, 0.82);
-margin: auto;
-margin-top: 109px;
+    height: 550px;
+    box-shadow: 0 0 65px rgba(0, 0, 0, 0.82);
+    margin: auto;
+    margin-top: 109px;
 }
 .logo1{
     width: 90px;
-height: 40px;
-position: absolute;
-left: 21px;
-top: 24px;
+    height: 40px;
+    position: absolute;
+    left: 21px;
+    top: 24px;
 }
 .photos{
     position: absolute;
@@ -51,21 +49,21 @@ li{
 }
 .text_description{
     width: 155px;
-/* height: 44px; */
-color: #e1e1e1;
-font-family: "Museo Sans Rounded -100";
-font-size: 24px;
-font-weight: 400;
+    font-family: "Open Sans";
+    color: #e1e1e1;
+    font-family: "Museo Sans Rounded -100";
+    font-size: 24px;
+    font-weight: 400;
 }
 .text_2{
     width: 172px;
-height: 14px;
-opacity: 0.54;
-color: #e1e1e1;
-font-family: "Museo Sans Rounded -100";
-font-size: 14px;
-font-weight: 400;
-margin-top: 25px;
+    height: 14px;
+    opacity: 0.54;
+    color: #e1e1e1;
+    font-family: "Museo Sans Rounded -100";
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 25px;
 }
 .checked {
     color: orange;
@@ -81,7 +79,7 @@ margin-top: 25px;
     border: 1px solid #ccc;
     width: 69px;
     height: 32px;
-padding: 5px 8px;
+    padding: 5px 8px;
     overflow: hidden;
     background: transparent;
     -webkit-appearance: none;
@@ -110,7 +108,7 @@ padding: 5px 8px;
     border: 1px solid #ccc;
     width: 69px;
     height: 32px;
-padding: 5px 8px;
+    padding: 5px 8px;
     overflow: hidden;
     background: transparent;
     -webkit-appearance: none;
@@ -137,7 +135,7 @@ padding: 5px 8px;
     position: absolute;
     left: 200px;
     top: 450px;
-list-style-type: none  ;
+    list-style-type: none;
 }
 li {
     float: left;
@@ -159,13 +157,13 @@ li {
       text-align: center;
       text-transform: uppercase;
       background-color: transparent;
-     padding-top: 10px;
+      padding-top: 10px;
       border: 1px solid grey;
       width: 184px;
-height: 40px;
-left: 465px;
-top: 345px;
-color: white;
+        height: 40px;
+        left: 465px;
+        top: 345px;
+        color: white;
   }
   .add:hover{
       background-color: white;
