--- a/lesson11/3/style.css
+++ b/lesson11/3/style.css
@@ -27,6 +27,9 @@ font-size: 17px;
 font-weight: 300;
 line-height: 25px;
 }
+input[type=text], textarea{
+    padding: 5px;
+}
 .text{
     display: inline-block;
     color: #262626;
@@ -39,6 +42,8 @@ line-height: 25px;
     position: relative;
     width: 987px;
     height: 445px;
+    padding-top: 40px;
+    padding-bottom: 70px;
     margin: 0 auto;
     margin-top: 15px;
 }
@@ -145,33 +150,3 @@ position: absolute;
 left: 50%;
 top: 32px;
 }
-.made_with{
-
-}
-
- .footer{
-    position: absolute;
-     bottom: 0;
-     width: 100%;
-height: 80px;
-background-color: #262626;
- }
- .footer1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
- }
- .love{
-    color: #ff2b58;
-    font-family: "Raleway - Bold";
-    font-weight: 700;
- }
- .made_with{
-    font-size: 15px;
-    font-weight: 300;
-    color: #b9b9b9;
-    line-height: 25px;
-    font-family: "Raleway - Light";
-    position: absolute;
-    top: 38px;
- }
