--- a/lesson7/2/style.css
+++ b/lesson7/2/style.css
@@ -5,25 +5,23 @@ body{
     background-color: #e2e7ec;
 }
 .block {
-    width: 1200px;
-   height: 450px;
+    max-width: 1200px;
+    margin: 0 auto;
     display: flex;
-    flex-direction: row ;
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 80px 0px 0px 70px;
   }
- .bl1{
-   
-background:#fff;
-justify-content:space-between;
-text-align: center;
-font-size: 20px;
-flex: 0 330px;
-font-family: Miso;
-font-size: 30px;
-letter-spacing: 1.75px;
-height: 540px;
+ .bl1{ 
+    background:#fff;
+    justify-content:space-between;
+    text-align: center;
+    font-size: 20px;
+    flex: 0 330px;
+    font-family: Miso;
+    font-size: 30px;
+    letter-spacing: 1.75px;
+    height: 540px;
 
 }
  
@@ -38,11 +36,11 @@ height: 540px;
     bottom: 15px;
     left: 143px;
     width: 433px;
-color: #ffffff;
-font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-font-size: 30px;
-text-transform: uppercase;
-color: #ffffff;
+    color: #ffffff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 30px;
+    text-transform: uppercase;
+    color: #ffffff;
  }
  p{
     opacity: 0.5;
@@ -55,29 +53,29 @@ color: #ffffff;
  }
  .data2{
    
-     opacity: 0.5;
+    opacity: 0.5;
     font-size: 15px;
-       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-transform: uppercase;
     color: #818181;
  } 
  .center-left{
-     text-align: left;
-     padding-left: 27px;
+    text-align: left;
+    padding-left: 27px;
     color: #1d1d1d;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-font-size: 22px;
-font-weight: 400;
-line-height: 30px;
-text-transform: uppercase;
- margin-top: 20px;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 30px;
+    text-transform: uppercase;
+    margin-top: 20px;
  
  }
  .icons{
      margin-top: 60px;
  }
  .bl2{
-     margin-top: 20px;
+    margin-top: 20px;
     background:#fff;
     justify-content:space-between;
     text-align: center;
