--- a/lesson8/2/style.css
+++ b/lesson8/2/style.css
@@ -20,6 +20,7 @@ left: 650px;
     font-family: "Playfair Display";
     font-size: 48px;
     font-weight: 400;
+    padding-left: 20px;
     margin-top: 13px;
 }
 .sub_title{
