--- a/style.css
+++ b/style.css
@@ -1,27 +1,140 @@
+@font-face{
+  font-family: "Oleo";
+  src: url(Oleo_Script/OleoScript-Bold.ttf) format('truetype');
+}
+*{
+  margin: 0;
+  padding: 0;
+   box-sizing: border-box;
+}
 body{
     padding: 0;
     margin: 0;
     line-height: 1;
-   background-color: #FFF0F5;
+   background-color: #86a8d4;
     font-family: Arial, 'sans-serif';
  
+}
+button, a{
+  outline: none;
+  cursor: pointer;
 }
 .container{
   width: 85%;
   max-width: 1400px;
   margin: auto;
 }
-#beetroot_img{
-    width: 100px;
-    height: 100px;
-    margin-left: 30px;
-  }
-  .title{
+.gif{
+  padding-top: 15px;
+}
+.container__top{
+  display: flex;
+}
+.intro-content{
+  padding-top: 100px;
+}
+.heading1{
+  font-family: "Oleo", 'sans-serif';
+  font-size: 40px;
+  letter-spacing: 1.5px;
+  padding-bottom: 15px;
+}
+.text1{
+  font-size: 23px;
+}
+.open-but, .close-but{
+  width: 150px;
+  margin: 25px 0;
+  padding: 15px 10px;
+  font-size: 18px;
+  transition: all 0.7s;
+  border: none;
+  border-radius: 15px;
+  position: relative;
+}
+.open-but:hover{
+  background:transparent;
+  border: 2px solid rgb(79, 79, 165);
+  color: #fff;
+}
+.close-but:hover{
+  background:transparent;
+  border: 2px solid rgb(79, 79, 165);
+  color: #fff;
+}
+.worklist{
+  display: none;
+}
+.worklist-grid{
+  display: flex;
+  padding-top: 20px;
+  flex-wrap: wrap;
+}
+.works-el{
+  padding: 12px;
+  opacity: 1;
+  transition: 1s ease;
+  display: inline-block;
+  list-style: none;
+}
+.works-el:hover{
+  -webkit-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  transform: scale(0.8);
+  opacity: 0.8;
+  transition: 1s ease;
+}
+.works-el a{
+  text-decoration: none;
+  color: #fff;
+}
+.works-el-photo{
+  width: 230px;
+  height: 130px;
+  border-radius: 15px;
+}
+.title{
       font-weight: normal;
-      color: #cc0000;
+      padding-bottom: 20px;
+      font-size: 40px;
+      font-family: "Oleo";
+      font-weight: 600;
+      color: #000;
+      background-clip: text;
       text-align: center;
-      border-bottom: 2px solid black;
+      border-bottom: 1px solid black;
   }
+.title:hover{
+    color: rgb(42, 68, 214);
+    transition: 1s;
+  }
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .middle:hover{
+    opacity: 1;
+  }
+  .text{
+    color: #fff;
+    font-size: 28px;
+    font-weight: 700;
+    opacity: 1;
+    background-color: #6983f7;
+    border: 1px solid black;
+    border-radius: 5px;
+  }
+
+
+
+
+
   .lessons_list{
     display: flex;
     color: black;
