--- a/chic/css/style.css
+++ b/chic/css/style.css
@@ -1,591 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  box-sizing: border-box;
-}
-
-@font-face {
-  font-family: "Open Sans";
-  src: url("../fonts/Open_Sans/OpenSans-Regular.ttf") format("truetype");
-}
-@font-face {
-  font-family: "Helvetica Neue";
-  src: url("../fonts/HelveticaNeue/HelveticaNeue-CondensedRegular.eot");
-  src: url("../fonts/HelveticaNeue/HelveticaNeue-CondensedRegular.ttf") format("truetype"), url("../fonts/HelveticaNeue/HelveticaNeue-CondensedRegular.woff") format("woff");
-}
-.button-open {
-  border: none;
-}
-
-.header-right {
-  position: relative;
-}
-
-#myLinks {
-  display: none;
-  background-image: url(../img/Vector.png);
-  background-size: 264px;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
-.icon {
-  color: #000;
-  font-size: 36px;
-  padding: 19px;
-  margin-top: 5px;
-  border: 1px solid #ccc;
-  display: none;
-}
-
-.burger_link {
-  display: block;
-  text-align: center;
-  padding: 22px 0;
-  font-family: "Open Sans";
-  font-size: 18px;
-  background: url(../img/nav-line.png);
-  background-repeat: no-repeat;
-  text-decoration: none;
-  background-position: center center;
-  color: #000;
-}
-
-#myLinks {
-  width: 100%;
-}
-
-.contacts a {
-  text-align: center;
-  width: 100%;
-  text-decoration: none;
-  color: #000;
-}
-
-.b-lang {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.b-lang-item {
-  font-family: "Open Sans";
-  font-size: 18px;
-  list-style: none;
-  padding: 0 10px;
-  text-transform: uppercase;
-}
-
-.b-lang-item:hover {
-  color: #ccc;
-}
-
-.bg-modal {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 192, 203, 0.474);
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 60;
-  display: flex;
-  justify-content: center;
-  display: none;
-}
-.bg-modal .modal-content {
-  margin-top: 277px;
-  height: 490px;
-  width: 495px;
-  max-width: 570px;
-  position: relative;
-  background-color: #fff;
-}
-.bg-modal .modal-content .modal-title {
-  font-family: "Open Sans";
-  font-size: 24px;
-  display: block;
-  margin: 0 auto;
-  max-width: 360px;
-  text-align: center;
-  padding-top: 75px;
-  line-height: 1.5;
-}
-.bg-modal .modal-content .modal-name, .bg-modal .modal-content .modal-tel {
-  font-family: "Open Sans";
-  font-size: 16px;
-  padding-left: 14px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 100%;
-  max-width: 360px;
-  display: block;
-  margin: 0 auto;
-  margin-top: 48px;
-  border: 1px solid #E0AFBC;
-  outline: none;
-}
-.bg-modal .modal-content .modal-tel {
-  margin-top: 10px;
-}
-.bg-modal .modal-content .modal-decor {
-  color: #E0AFBC;
-  text-align: center;
-  padding-top: 15px;
-  font-size: 40px;
-}
-.bg-modal .modal-content .modal-button {
-  display: block;
-  margin: 0 auto;
-  margin-top: 20px;
-  font-family: Open Sans;
-  letter-spacing: 0.25em;
-  padding: 24px 55px;
-  background-color: #E0AFBC;
-  border: none;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 16px;
-}
-.bg-modal .modal-content .modal-button:hover {
-  background-color: #c798a4;
-}
-.bg-modal .modal-content .close {
-  top: 0;
-  right: -80px;
-  cursor: pointer;
-  border-radius: 50%;
-  position: absolute;
-}
-
-.main-container {
-  max-width: 1760px;
-  margin: 0 auto;
-}
-.main-container header {
-  margin-top: 25px;
-  display: flex;
-  justify-content: space-between;
-}
-.main-container .header-left {
-  display: flex;
-}
-.main-container .header-left .header__social {
-  display: flex;
-}
-.main-container .header-left .header__social .header-icon {
-  margin-top: 3px;
-  padding: 17px;
-  border: 1px solid #E0E0E0;
-}
-.main-container .header-left .header__social .header-icon:hover {
-  border: 1px solid pink;
-  fill: pink;
-}
-.main-container .header-left .header__lang {
-  margin: 10px 0 0 45px;
-}
-.main-container .header-left .header__lang-list {
-  list-style: none;
-  display: flex;
-}
-.main-container .header-left .header__lang-list-item {
-  font-family: "Open Sans";
-  text-transform: uppercase;
-  padding: 20px 10px;
-}
-.main-container .header-left .header__lang-list-item:hover {
-  color: #ccc;
-}
-.main-container .header-right {
-  display: flex;
-}
-.main-container .nav-list {
-  display: flex;
-  list-style: none;
-  margin-top: 29px;
-  margin-right: 30px;
-}
-.main-container .nav-list .list-item {
-  padding: 0 8px;
-  font-family: "Open Sans";
-  color: #171717;
-  letter-spacing: 1.5px;
-  background: url(../img/nav-line.png);
-  margin: 0 10px;
-  background-repeat: no-repeat;
-  background-position: bottom left;
-}
-.main-container .nav-list .list-item:hover {
-  background-color: #E0AFBC;
-}
-.main-container .nav-list .onas {
-  background-size: 39px 10px;
-}
-.main-container .nav-list .nav-link {
-  color: #000;
-  text-decoration: none;
-}
-.main-container .contacts {
-  display: flex;
-  margin-right: -12px;
-}
-.main-container .contacts .header-contacts {
-  padding: 20px 20px 18px 20px;
-  background-color: #fff;
-}
-.main-container .contacts .header-contacts:hover {
-  border: 1px solid #E0AFBC;
-}
-.main-container .contacts .header-phone {
-  font-family: "Helvetica Neue";
-  font-size: 16px;
-  padding: 30px 18px 15px 23px;
-  letter-spacing: 2.5px;
-  border: 1px solid #E0E0E0;
-  display: inline-block;
-}
-.main-container .contacts .header-phone:hover {
-  border: 1px solid #E0AFBC;
-}
-
-.footer-call {
-  outline: none;
-}
-
-@media (max-width: 1216px) {
-  .main-container .header-left .header__lang-list {
-    display: none;
-  }
-}
-@media (max-width: 1100px) {
-  .main-container .contacts {
-    margin-right: 0;
-  }
-
-  .main-container .nav-list {
-    display: none;
-  }
-
-  .main-container .contacts .header-phone {
-    display: none;
-  }
-
-  .icon {
-    display: block;
-  }
-
-  .footer-call {
-    display: none;
-  }
-}
-@media (min-width: 1100px) {
-  #myLinks {
-    display: none;
-  }
-}
-@media (max-width: 800px) {
-  .slider .slick-arrow.slick-next {
-    display: none !important;
-  }
-}
-@media (max-width: 690px) {
-  .bg-modal .modal-content .close {
-    display: none;
-  }
-}
-@media (max-width: 517px) {
-  .bg-modal .modal-content {
-    max-width: 387px;
-  }
-}
-@media (max-width: 412px) {
-  .bg-modal .modal-content .modal-name, .bg-modal .modal-content .modal-tel {
-    max-width: 309px;
-  }
-}
-.wrapper {
-  margin-top: 50px;
-}
-
-.slider-photo {
-  max-width: 1770px;
-  width: 100%;
-}
-
-.slick-track {
-  display: flex;
-}
-
-.slick-list {
-  overflow: hidden;
-}
-
-.slider .slick-arrow {
-  position: absolute;
-  top: 99%;
-  left: 25px;
-  z-index: 40;
-}
-
-.slider__item {
-  position: relative;
-}
-
-.slick-arrow.slick-next {
-  font-family: "Open Sans";
-  outline: none;
-  font-size: 12px;
-  text-transform: uppercase;
-  transform: rotate(90deg);
-  background: transparent;
-  border: none;
-}
-
-.slick-arrow.slick-next::before {
-  display: inline-block;
-  content: "";
-  border-top: 2px solid black;
-  width: 2.5rem;
-  margin: 4px 1rem;
-}
-
-.slider .slick-arrow.slick-prev {
-  display: none !important;
-}
-
-.slick-dots {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.slick-dots li {
-  margin: 0 6px;
-  margin-top: -90px;
-  font-size: 0;
-  z-index: 50;
-}
-
-.slick-dots li.slick-active {
-  background-color: #E0AFBC;
-  border-radius: 50%;
-  width: 16px;
-  height: 16px;
-}
-
-.slick-dots li button {
-  font-size: 0;
-  border: none;
-  outline: none;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background: #e0afbcb4;
-}
-
-.footer-button {
-  display: block;
-  margin: 0 auto;
-  font-family: "Open Sans";
-  font-weight: 800;
-  text-transform: uppercase;
-  font-size: 16px;
-  letter-spacing: 3px;
-  margin-top: 33px;
-  padding: 26px 65px;
-  background-color: #fff;
-  border: 1px solid #E0AFBC;
-}
-
-.footer-button:hover {
-  background-color: #E0AFBC;
-}
-
-.footer-call {
-  margin: -13px 0 0 96.5%;
-  animation: pulse 2s infinite;
-  background: transparent;
-  border-radius: 50%;
-  border: 2px solid #E0AFBC;
-}
-
-.footer-phone {
-  padding: 10px;
-  animation: pulse 2s infinite;
-  width: 80px;
-}
-
-@keyframes pulse {
-  0% {
-    transform: scale(0.9);
-  }
-  70% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0.9);
-  }
-}
-.logo-name {
-  position: absolute;
-  top: 130px;
-  left: 175px;
-}
-
-.logoline1 {
-  position: absolute;
-  animation: 6s updown infinite;
-  left: 385px;
-  top: -70px;
-}
-
-.rotating {
-  position: absolute;
-  top: 170px;
-  left: 200px;
-  animation: rotating 4s linear infinite;
-}
-
-@keyframes rotating {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-.rotating1 {
-  position: absolute;
-  height: auto;
-  top: 65px;
-  left: 120px;
-  animation: rotating1 4s linear infinite;
-}
-
-@keyframes rotating1 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(-360deg);
-  }
-}
-@keyframes updown {
-  0% {
-    transform: translateY(-100px);
-  }
-  50% {
-    transform: translateY(100px);
-  }
-  100% {
-    transform: translateY(-100px);
-  }
-}
-@keyframes downup {
-  0% {
-    transform: translateY(100px);
-  }
-  50% {
-    transform: translateY(0px);
-  }
-  100% {
-    transform: translateY(100px);
-  }
-}
-.logoline2 {
-  top: 400px;
-  left: 385px;
-  animation: 6s downup infinite;
-  position: absolute;
-}
-
-@media (max-width: 1637px) {
-  .rotating1 {
-    top: 20px;
-  }
-}
-@media (max-width: 1466px) {
-  .rotating1 {
-    width: 100%;
-    max-width: 450px;
-  }
-
-  .rotating {
-    top: 64px;
-  }
-
-  .logo-name {
-    top: 24px;
-  }
-
-  .slider-photo {
-    min-height: 500px;
-  }
-}
-@media (max-width: 620px) {
-  .rotating1 {
-    left: 50px;
-  }
-
-  .rotating {
-    left: 76px;
-  }
-
-  .logo-name {
-    left: 69px;
-  }
-
-  .logoline1, .logoline2 {
-    left: 244px;
-  }
-}
-@media (max-width: 511px) {
-  .rotating1 {
-    max-width: 360px;
-  }
-
-  .logo-name {
-    max-width: 320px;
-  }
-
-  .rotating {
-    left: 62px;
-    max-width: 320px;
-    top: 42px;
-  }
-}
-@media (max-width: 414px) {
-  .rotating1 {
-    left: 0px;
-    max-width: 315px;
-  }
-
-  .logo-name {
-    left: 34px;
-    max-width: 259px;
-  }
-
-  .rotating {
-    left: 20px;
-    max-width: 300px;
-  }
-}
-@media (max-width: 456px) {
-  .slider-photo {
-    min-height: 400px;
-  }
-
-  .footer-button {
-    width: 95%;
-    letter-spacing: 0px;
-  }
-}
-@media (max-width: 334px) {
-  .footer-button {
-    padding: 26px 0px;
-  }
-}
+*{margin:0;padding:0;line-height:1;box-sizing:border-box}@font-face{font-family:"Open Sans";src:url("../fonts/Open_Sans/OpenSans-Regular.ttf") format("truetype")}@font-face{font-family:"Helvetica Neue";src:url("../fonts/HelveticaNeue/HelveticaNeue-CondensedRegular.eot");src:url("../fonts/HelveticaNeue/HelveticaNeue-CondensedRegular.ttf") format("truetype"),url("../fonts/HelveticaNeue/HelveticaNeue-CondensedRegular.woff") format("woff")}main{max-width:1770px;margin:0 auto}.header{margin-top:29px;margin-left:8px;display:flex;justify-content:space-between}.header-left{display:flex}.header-left__social svg{position:absolute;width:26px;left:19px;top:19px;height:26px}.header-left__social{display:flex}.header-left .icon-span-border{border:1px solid #E0E0E0;width:64px;height:64px;position:relative}.header-left .icon-span:hover svg{fill:#E0AFBC}.header-left .icon-span:hover .icon-span-border{border:1px solid #E0AFBC}.header-left .header__lang-list{list-style:none;text-transform:uppercase;cursor:pointer;margin-left:45px;font-family:"Open Sans"}.header-left .header__lang-list .header__lang-list-item:hover{color:#E0AFBC;font-weight:900;-webkit-text-stroke:0.1px black}.header-left .header__lang-list-item{float:left;padding:25px 10px}.header-left .header__lang-list .active{color:#ccc}.header .header-right{display:flex}.header .header-right .nav-list{display:flex;list-style:none;margin-top:29px;margin-right:30px}.header .header-right .nav-list .list-item{padding:0 8px;font-family:"Open Sans";color:#171717;letter-spacing:1.5px;background:url(../img/nav-line.png);margin:0 10px;background-repeat:no-repeat;background-position:bottom left}.header .header-right .nav-list .list-item:hover{background:rgba(224,175,188,0.3)}.header .header-right .nav-list .onas{background-size:39px 10px}.header .header-right .nav-list .nav-link{color:#000;text-decoration:none}.header .header-right .contacts-container{display:flex;position:relative;padding:19px;border:1px solid #ccc}.header .header-right .contacts-container .vertical-line{position:absolute;top:0;left:60px;width:1px;background-color:#ccc;height:100%}.header .header-right .contacts-container .contacts-number{margin-left:19px;padding-left:20px;font-family:"Helvetica Neue";letter-spacing:0.15em;padding-top:5px}.header .header-right .contacts-container:hover{border:1px solid #E0AFBC}.header .header-right .contacts-container:hover .vertical-line{background-color:#E0AFBC}.header .header-right .contacts-container:hover .phone{fill:#E0AFBC}@media (max-width:1255px){.header .header-right .nav-list{display:none}.header-left__lang{display:none}.header .header-right .contacts-container .contacts-number{display:none}.header .header-right .contacts-container .vertical-line{display:none}}
