--- a/chic/sass/medias.scss
+++ b/chic/sass/medias.scss
@@ -11,5 +11,14 @@
     .header .header-right .contacts-container .vertical-line{
         display: none;
     }
-
+    #imgplus{
+        display: block;
+    }
+    .header .header-right #imgplus{
+        display: block;
+       
+    }
+    .header .header-right .contacts-container{
+        
+    }
 }
