--- a/chic/sass/medias.scss
+++ b/chic/sass/medias.scss
@@ -4,6 +4,7 @@
     }
 }
 @media(max-width: 1255px){
+  
     .header .header-right .nav-list{
         display: none;
     }
@@ -166,7 +167,31 @@
     }
 }
 @media(max-width: 430px){
-    
+    .header-left .icon-span-border{
+        width: 48px;
+        height: 48px;
+    }
+    .header .header-right .contacts-container{
+        padding: 13px;
+    }
+    .header .closebtn{
+        width: 48px;
+        height: 48px;
+        padding-top: 5px;
+    }
+    .header .header-right .contacts-container svg{
+        width: 20px;
+        height: 20px;
+    }
+    .header .header-right #imgplus{
+        padding: 14px;
+    }
+    .header-left__social svg{
+        left: 13px;
+        top: 13px;
+        height: 20px;
+        width: 20px;
+    }
     .slider__item .slide-bg{
         height: 450px;
     }
