--- a/chic/sass/header.scss
+++ b/chic/sass/header.scss
@@ -56,10 +56,14 @@ main{
             cursor: pointer;
             margin-left: 45px;
             font-family: "Open Sans";
+            font-size: 15px;
+            line-height: 20px;
+            letter-spacing: 0.15em;
             .header__lang-list-item:hover{
                 color: #E0AFBC;
                 font-weight: 900;
-                -webkit-text-stroke: 0.1px black;
+                text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                -webkit-text-stroke:.03px black;
             }
            &-item{
                float: left;
@@ -185,12 +189,15 @@ main{
             margin: 20px auto;
            .burg-lang-list-item{
                margin: 30px 10px;
+               letter-spacing: 0.15em;
                outline: none;
            }
            .burg-lang-list-item:hover{
             color: #E0AFBC;
             font-weight: 900;
-            -webkit-text-stroke: 0.1px black;
+            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            -webkit-text-stroke:.03px black;
+        
            }
            .active{
             color: #ccc;  
