--- a/lessons/lesson14/1/_contact_us.scss
+++ b/lessons/lesson14/1/_contact_us.scss
@@ -19,7 +19,7 @@ text-align: center;
 padding: 60px;
 }
 .about_text_1{
-    width: 543px;
+    // width: 543px;
     height: 66px;
 font-family:Lato;
 display: block;
