--- a/lessons/lesson14/1/_block1.scss
+++ b/lessons/lesson14/1/_block1.scss
@@ -7,45 +7,35 @@
 $font:Lato,san-serif;
 $color:#ffffff;
 .block1{
-    width: 100%;
-    height: 1072px;
+   //  width: 100%;
+    height: 100vh;
     background-image: url(img/bakground1.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-&_logo{
-  
-     margin-top: 200px;
-     margin-left: 0;
+    padding-top: 200px;
+    .logo{
+       display: block;
+       margin: 0 auto;
     }
 &_heading-1{
-   position: absolute;
-   top: 330px;
-   width: 591px;
-   left:460px;
-   height: 103px;
-   color:$color;
+   color:#fff;
    font-family:$font;
    text-align: center;
    font-size: 54px;
+   padding-top: 30px;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 8.62px;
      }
    &_info{
-         display: block;
-         position: absolute;
+      display: block;
+      margin: 0 auto;
         text-align: center;
-        top: 520px;
-        left: 460px;
-         width: 579px;
-         height: 70px;
+         max-width: 579px;
         color: $color;
+        padding-top: 50px;
         font-family:$font;
         font-size: 15px;
         font-weight: 400;
@@ -54,183 +44,28 @@ $color:#ffffff;
         letter-spacing: 0.9px;
      }
      .scroll{
-         position: absolute;
-         top: 902px;
-         left: 740px;
+      display: block;
+      margin: 0 auto;
+      margin-top: 300px;
      }
      }
 
 
-     @media (max-width: 400px) {
-        .block1 {
-         background-image:none;
-         background-color: #aeb8cd;
-         width: 500px;
+    @media(max-width: 490px){
+      .block1_heading-1{
+         font-size: 40px;
+      }
+      .block1_info{
+         padding: 30px 10px;
+      }
+      .block1 .scroll {
         
-         &_logo{
-             top: 100px;
-
-             margin-left: -190px;
-         }
-        &_heading-1{
-            font-family: Lato, san-serif;
-            width: 150px;
-            height: 103px;
-            top: 340px;
-            text-align: center;
-            left: 40px;
-            letter-spacing: 6px;
-         }
-         &_info{
-            width: 200px;
-            height: 70px;
-            left: 50px;
-            top: 620px;
-         }
-         .scroll{
-            left: 150px;
-            top: 920px;
-        }
-
-     }}
-
-
-     @media (min-width:401px) and (max-width: 600px) {
-        .block1 {
-            background-image: url(img/bakground1.jpg);
-            background-position: center center;
-            background-size: cover;
-
-         width: 600px;
-      &_logo{
-        top: 100px;
-        margin-left: -150px;
-        
-      }
-        &_heading-1{
-         font-family: Lato, san-serif;
-         width: 200px;
-         height: 103px;
-         top: 340px;
-         left: 80px;
-         letter-spacing: 8px;
-         }
-         &_info{
-            width: 200px;
-            height: 70px;
-            left: 120px;
-            top: 620px;
-         }
-         .scroll{
-            left: 215px;
-            top: 920px;
-        }
-
-     }}
-
-     @media (min-width:601px) and (max-width: 800px) {
-      .block1 {
-          background-image: url(img/bakground1.jpg);
-          background-position: center center;
-          background-size: cover;
-
-       width: 600px;
-    &_logo{
-      top: 100px;
-      margin-left: -60px;
-      
+         margin-top: 249px;
+     }
     }
-      &_heading-1{
-           font-family:$font;
-          width: 200px;
-          height: 103px;
-          top: 340px;
-          left: 140px;
-          letter-spacing: 8px;
-       }
-       &_info{
-          width: 200px;
-          height: 70px;
-          left: 150px;
-          top: 620px;
-       }
-       .scroll{
-         left: 240px;
-          top: 920px;
-      }
-
-   }}
-
-
-   @media (min-width:801px) and (max-width: 900px) {
-      .block1 {
-          background-image: url(img/bakground1.jpg);
-          background-position: center center;
-          background-size: cover;
-
-       width: 900px;
-    &_logo{
-      top: 100px;
-      margin-left: -120px;
-      
+    @media(max-width: 362px){
+        .block1_heading-1 {
+      font-size: 27px;
+  }
     }
-      &_heading-1{
-           font-family:$font;
-          width: 200px;
-          height: 103px;
-          left: 290px;
-          top: 340px;
-          font-size: 24px;
-          font-size: 20px;
-          letter-spacing: 8px;
-       }
-       &_info{
-         width: 200px;
-    height: 70px;
-    left: 290px;
-    top: 460px;
-       }
-       .scroll{
-            left: 380px;
-    top: 800px;
-      }
-
-   }}
-
-   @media (min-width:901px) and (max-width: 1400px) {
-      .block1 {
-          background-image: url(img/bakground1.jpg);
-          background-position: center center;
-          background-size: cover;
-
-       width: 1400px;
-    &_logo{
-      top: 100px;
-      margin-left: -480px;
-      
-    }
-      &_heading-1{
-           font-family:$font;
-          width: 200px;
-          height: 103px;
-          left: 360px;
-          top: 340px;
-          font-size: 24px;
-          font-size: 20px;
-          letter-spacing: 8px;
-       }
-       &_info{
-         width: 200px;
-         height: 70px;
-         left: 360px;
-         top: 460px;
-       }
-       .scroll{
-         left: 450px;
-    top: 800px;
-      }
-
-   }}
-
-
-  
+   
