--- a/lessons/lesson14/1/_block_info1.scss
+++ b/lessons/lesson14/1/_block_info1.scss
@@ -4,41 +4,39 @@
     line-height: 1;
 }
 .container_2{
-    width: 100%;
-    height:500px;
-    .about_us{
-    border: none;
-    width: 902px;
-height: 312px;
-margin: 0 auto;
-margin-top: 146px;
-}
+margin-top: 50px;
+width: 100%;
+margin-bottom: 50px;
+   fieldset{
+       max-width: 800px;
+       margin: 0 auto;
+   }
 .info_2{
     text-align: center;
     color: #3c3c3c;
-font-family: Lato;
-font-size: 34px;
-font-weight: 700;
-text-transform: uppercase;
-padding:  65px 100px;
-letter-spacing: 8.95px;
+    font-family: Lato;
+    font-size: 34px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding:  65px 100px;
+    letter-spacing: 8.95px;
 }
 .about_text_1{
-color: #3c3c3c;
-width: 553px;
-margin-bottom: 20px;
-margin-left: 178px;
-text-align: center;
-font-family: Lato;
-font-size: 16px;
-font-weight: 300;
-line-height: 24px;
+    color: #3c3c3c;
+    max-width: 553px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
 }
 .about_text_2{
     color: #3c3c3c;
-     width: 553px;
-     margin-left: 178px;
-     margin-bottom: 50px;
+    max-width: 553px;
+    margin-bottom: 50px;
+    display: block;
+    margin: 0 auto 50px auto;
     text-align: center;
     font-family: Lato;
     font-size: 16px;
@@ -47,206 +45,48 @@ line-height: 24px;
     }
 }
 
-@media (min-width:319px) and (max-width: 400px) {
-    .container_2{
-        width: 500px;
-        background-color:#fff;
-        height:400px;
-    
-    .about_us {
-        border: none;
-        width:400px;
-        height: 312px;
-        margin: 20px 10px;
-        
+@media (max-width: 817px){
+    .container_2 fieldset{
+        margin-left: 15px;
+        margin-right: 15px;
     }
-    .info_2 {
-        left: 0;
-        width: 260px;
-        text-align: start;
-        color: #3c3c3c;
-        font-family: Lato;
-        font-size: 34px;
-        font-weight: 700;
-        text-transform: uppercase;
-        padding: 5px 5px;
-        letter-spacing: 8.95px;
+    .container_3 .services{
+        margin-left: 15px;
+        margin-right: 15px;  
     }
-    fieldset{
-        width: 200px;
+    .container_3 .info_3{
+        padding: 65px 46px;
     }
-    .about_text_1 {
-        color: #3c3c3c;
-        width: 200px;
-        margin-bottom: 20px;
-        margin-left:30px;
-        text-align: center;
-        font-size: 14px;
-        font-weight: 300;
-        line-height: 20px;
-    }
-    .about_text_2 {
-        color: #3c3c3c;
-        width: 200px;
-        margin-left: 30px;
-        text-align: center;
-        font-family: Lato;
-        font-size: 14px;
-        font-weight: 300;
-        line-height: 24px;
+    .container_2 .info_2{
+        padding: 65px 46px;
+
     }
 }
-
+@media (max-width: 611px){
+    .container_2 .about_text_1{
+        margin-left: 10px;
+        margin-right: 10px;
+        font-size: 20px;
+    }
+    .container_3 .about_text_1_white{
+        margin-left: 10px;
+        margin-right: 10px;
+        font-size: 20px; 
+    }
+    .container_2  .about_text_2{
+        margin-left: 10px;
+        margin-right: 10px;
+        font-size: 20px;
+    }
 }
-
-
-@media (min-width:401px) and (max-width: 600px){
-    .container_2{
-        width: 700px;
-        background-color:#fff;
-        height:400px;
-        .about_us{
-            width: 500px;
-            margin: 30px 20px;
-        }
-        .info_2 {
-            text-align: start;
-            color: #3c3c3c;
-            font-family: Lato;
-            font-size: 34px;
-            font-weight: 700;
-            text-transform: uppercase;
-            padding: 0;
-            letter-spacing: 8.95px;
-        }
-        fieldset{
-            width: 230px;
-            height: 500px;
-        }
-        .about_text_1 {
-            color: #3c3c3c;
-            width: 220px;
-            margin-bottom: 20px;
-            margin-left: 20px;
-            text-align: center;
-            font-family: Lato;
-            padding: 10px 10px;
-            font-size: 14px;
-            font-weight: 300;
-            line-height: 24px;
-        }
-        .about_text_2 {
-            color: #3c3c3c;
-            width: 220px;
-            margin-left: 20px;
-           margin-top: 60px;
-            text-align: center;
-            font-family: Lato;
-            font-size: 14px;
-            font-weight: 300;
-            line-height: 20px;
-        }
-
-}
-}
-
-@media (min-width:601px) and (max-width: 800px){
-    .container_2{
-        width: 900px;
-        background-color:#fff;
-        height:400px;
-        .about_us{
-            width: 500px;
-            margin: 30px 20px;
-        }
-        .info_2 {
-            text-align: start;
-            color: #3c3c3c;
-            font-family: Lato;
-            font-size: 34px;
-            font-weight: 700;
-            text-transform: uppercase;
-            padding: 0;
-            letter-spacing: 8.95px;
-        }
-        fieldset{
-            width: 230px;
-            height: 500px;
-        }
-        .about_text_1 {
-            color: #3c3c3c;
-            width: 220px;
-            margin-bottom: 20px;
-            margin-left: 20px;
-            text-align: center;
-            font-family: Lato;
-            padding: 10px 10px;
-            font-size: 14px;
-            font-weight: 300;
-            line-height: 24px;
-        }
-        .about_text_2 {
-            color: #3c3c3c;
-            width: 220px;
-            margin-left: 20px;
-           margin-top: 60px;
-            text-align: center;
-            font-family: Lato;
-            font-size: 14px;
-            font-weight: 300;
-            line-height: 20px;
-        }
-
-}
-}
-
-@media (min-width:800px) and (max-width: 1460px){
-    .container_2{
-        width: 1500px;
-        background-color:#fff;
-        height:400px;
-        .about_us{
-            width: 500px;
-            margin: 30px 20px;
-        }
-        .info_2 {
-            text-align: center;
-            color: #3c3c3c;
-            font-family: Lato;
-            font-size: 26px;
-            font-weight: 700;
-            text-transform: uppercase;
-            padding: 0;
-            letter-spacing: 8.95px;
-        }
-        fieldset{
-            width: 230px;
-            height: 500px;
-        }
-        .about_text_1 {
-            color: #3c3c3c;
-            width: 220px;
-            margin-bottom: 20px;
-            margin-left: 20px;
-            margin-top: 40px;
-            text-align: center;
-            font-family: Lato;
-            padding: 10px 10px;
-            font-size: 10px;
-            font-weight: 300;
-            line-height: 24px;
-        }
-        .about_text_2 {
-            color: #3c3c3c;
-            width: 220px;
-            margin-left: 20px;
-           margin-top: 60px;
-            text-align: center;
-            font-family: Lato;
-            font-size: 10px;
-            font-weight: 300;
-            line-height: 20px;
-        }
-
-}
+@media (max-width: 493px){
+    .container_2 .about_text_2{
+        margin: 40px auto 50px auto;
+    }
+    .container_2 .info_2 {
+        padding: 47px 21px;
+    }
+    .container_3 .info_3 {
+        padding: 47px 21px;
+    }
 }
